--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri Feb 21 2025 20:08:02 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri Feb 21 2025 21:05:42 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="67adaf536612db1a46d3db74" data-wf-site="67adaf536612db1a46d3db6d">
 <head>
   <meta charset="utf-8">
@@ -40,14 +40,8 @@
     </div>
   </div>
   <section class="hero-section">
-    <div class="div-block">
-      <a href="#products" class="div-block-34 w-inline-block"><img src="images/Group-1.svg" loading="lazy" style="-webkit-transform:translate3d(null, 0px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(null, 0px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(null, 0px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(null, 0px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" data-w-id="75a86a6c-e93b-cb01-eb09-25f592092a8e" alt=""></a>
-      <div class="link-block">
-        <div data-w-id="786788b7-3546-ae30-0382-9ca69024101f" class="code-embed-10 w-embed"><svg width="100" height="100" viewbox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M50 8.33334C41.7591 8.33334 33.7033 10.7771 26.8512 15.3554C19.9992 19.9338 14.6587 26.4413 11.505 34.0549C8.35137 41.6685 7.52623 50.0462 9.13395 58.1288C10.7417 66.2113 14.71 73.6356 20.5372 79.4628C26.3644 85.29 33.7887 89.2583 41.8712 90.8661C49.9538 92.4738 58.3316 91.6486 65.9451 88.495C73.5587 85.3413 80.0662 80.0008 84.6446 73.1488C89.2229 66.2967 91.6667 58.2409 91.6667 50C91.6667 44.5283 90.5889 39.1101 88.495 34.0549C86.401 28.9996 83.3319 24.4063 79.4628 20.5372C75.5937 16.6681 71.0004 13.599 65.9451 11.505C60.8899 9.41108 55.4717 8.33334 50 8.33334ZM41.6667 68.75V31.25L66.6667 50L41.6667 68.75Z" fill="currentColor"></path>
-          </svg></div>
-      </div>
-    </div>
+    <div style="padding-top:56.17021276595745%" class="w-embed-youtubevideo youtube"><iframe src="https://www.youtube.com/embed/CDHbeJ0AM7o?rel=0&amp;controls=0&amp;autoplay=0&amp;mute=0&amp;start=0" frameborder="0" style="position:absolute;left:0;top:0;width:100%;height:100%;pointer-events:auto" allow="autoplay; encrypted-media" allowfullscreen="" title="Anvil Brand Film High Res 2025"></iframe></div>
+    <a href="#products" class="div-block-34 w-inline-block"><img src="images/Group-1.svg" loading="lazy" style="-webkit-transform:translate3d(null, 0px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(null, 0px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(null, 0px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(null, 0px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" data-w-id="8aa5821c-ed3e-3b9f-05dc-a1ffff5b4e4f" alt=""></a>
   </section>
   <section class="section double-pd ectra">
     <div class="container centered">
@@ -885,9 +879,9 @@ background-color: #bef84d;
   <section class="section">
     <div class="container centered">
       <div class="w-layout-grid grid-6">
-        <div class="div-block-43"><img src="images/form_img.jpg" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 66vw, (max-width: 991px) 62vw, (max-width: 1439px) 100vw, 1560px" srcset="images/form_img-p-500.jpg 500w, images/form_img-p-800.jpg 800w, images/form_img.jpg 1024w" alt="" id="Contact" class="image-14"></div>
+        <div class="div-block-43"><img src="images/form_img.jpg" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 66vw, (max-width: 991px) 62vw, (max-width: 1439px) 100vw, 1560px" srcset="images/form_img-p-500.jpg 500w, images/form_img-p-800.jpg 800w, images/form_img.jpg 1024w" alt="" class="image-14"></div>
         <div id="w-node-adfa8ac8-3628-f403-2943-23e386f6ad0b-46d3db74" class="div-block-44">
-          <div class="div-block-45">
+          <div id="Contact" class="div-block-45">
             <div class="div-block-57">
               <h2>Get in Touch</h2>
             </div>
@@ -1107,14 +1101,14 @@ background-color: #bef84d;
       </div>
     </div>
   </div>
-  <div data-w-id="8cc27153-3877-b2c0-77dd-7cde2d0f82ac" style="display:none;opacity:0" class="service-6">
+  <div data-w-id="8cc27153-3877-b2c0-77dd-7cde2d0f82ac" class="service-6">
     <div class="div-block-61">
       <div data-w-id="90cda8df-6deb-3c9c-0b80-f6f994bcbb76" class="code-embed-11 w-embed"><svg width="48" height="48" viewbox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
           <rect width="48" height="48" rx="20" fill="currentColor"></rect>
           <path fill-rule="evenodd" clip-rule="evenodd" d="M35.6801 13.8644C35.7815 13.763 35.862 13.6426 35.9169 13.5101C35.9718 13.3776 36 13.2356 36 13.0922C36 12.9487 35.9718 12.8067 35.9169 12.6742C35.862 12.5417 35.7815 12.4213 35.6801 12.3199C35.5787 12.2185 35.4583 12.138 35.3258 12.0831C35.1933 12.0282 35.0513 12 34.9078 12C34.7644 12 34.6224 12.0282 34.4899 12.0831C34.3574 12.138 34.237 12.2185 34.1356 12.3199L24 22.4576L13.8644 12.3199C13.763 12.2185 13.6426 12.138 13.5101 12.0831C13.3776 12.0282 13.2356 12 13.0922 12C12.9487 12 12.8067 12.0282 12.6742 12.0831C12.5417 12.138 12.4213 12.2185 12.3199 12.3199C12.2185 12.4213 12.138 12.5417 12.0831 12.6742C12.0282 12.8067 12 12.9487 12 13.0922C12 13.2356 12.0282 13.3776 12.0831 13.5101C12.138 13.6426 12.2185 13.763 12.3199 13.8644L22.4576 24L12.3199 34.1356C12.1151 34.3404 12 34.6182 12 34.9078C12 35.1975 12.1151 35.4753 12.3199 35.6801C12.5247 35.8849 12.8025 36 13.0922 36C13.3818 36 13.6596 35.8849 13.8644 35.6801L24 25.5424L34.1356 35.6801C34.3404 35.8849 34.6182 36 34.9078 36C35.1975 36 35.4753 35.8849 35.6801 35.6801C35.8849 35.4753 36 35.1975 36 34.9078C36 34.6182 35.8849 34.3404 35.6801 34.1356L25.5424 24L35.6801 13.8644Z" fill="black"></path>
         </svg></div>
     </div>
-    <div style="padding-top:56.17021276595745%" class="w-embed-youtubevideo"><iframe src="https://www.youtube-nocookie.com/embed/CDHbeJ0AM7o?rel=0&amp;controls=0&amp;autoplay=0&amp;mute=1&amp;start=0" frameborder="0" style="position:absolute;left:0;top:0;width:100%;height:100%;pointer-events:auto" allow="autoplay; encrypted-media" allowfullscreen="" title="Anvil Brand Film High Res 2025"></iframe></div>
+    <div style="padding-top:56.17021276595745%" class="w-embed-youtubevideo"><iframe src="https://www.youtube-nocookie.com/embed/CDHbeJ0AM7o?rel=0&amp;controls=0&amp;autoplay=0&amp;mute=0&amp;start=0" frameborder="0" style="position:absolute;left:0;top:0;width:100%;height:100%;pointer-events:auto" allow="autoplay; encrypted-media" allowfullscreen="" title="Anvil Brand Film High Res 2025"></iframe></div>
   </div>
   <section class="footer-dark">
     <div class="container-3">
