--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri Feb 21 2025 21:05:42 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Sat Feb 22 2025 07:43:55 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="67adaf536612db1a46d3db74" data-wf-site="67adaf536612db1a46d3db6d">
 <head>
   <meta charset="utf-8">
@@ -40,8 +40,14 @@
     </div>
   </div>
   <section class="hero-section">
-    <div style="padding-top:56.17021276595745%" class="w-embed-youtubevideo youtube"><iframe src="https://www.youtube.com/embed/CDHbeJ0AM7o?rel=0&amp;controls=0&amp;autoplay=0&amp;mute=0&amp;start=0" frameborder="0" style="position:absolute;left:0;top:0;width:100%;height:100%;pointer-events:auto" allow="autoplay; encrypted-media" allowfullscreen="" title="Anvil Brand Film High Res 2025"></iframe></div>
-    <a href="#products" class="div-block-34 w-inline-block"><img src="images/Group-1.svg" loading="lazy" style="-webkit-transform:translate3d(null, 0px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(null, 0px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(null, 0px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(null, 0px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" data-w-id="8aa5821c-ed3e-3b9f-05dc-a1ffff5b4e4f" alt=""></a>
+    <div data-poster-url="videos/yt-c-poster-00001.jpg" data-video-urls="videos/yt-c-transcode.mp4,videos/yt-c-transcode.webm" data-autoplay="true" data-loop="true" data-wf-ignore="true" id="poundsound" class="background-video-2 w-background-video w-background-video-atom"><video id="d9f563c4-4851-712a-9bb1-df27e6d4f95a-video" autoplay="" loop="" style="background-image:url(&quot;videos/yt-c-poster-00001.jpg&quot;)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
+        <source src="videos/yt-c-transcode.mp4" data-wf-ignore="true">
+        <source src="videos/yt-c-transcode.webm" data-wf-ignore="true">
+      </video>
+      <div class="div-block">
+        <a href="#products" class="div-block-34 w-inline-block"><img style="-webkit-transform:translate3d(null, 0px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(null, 0px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(null, 0px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(null, 0px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" data-w-id="d9f563c4-4851-712a-9bb1-df27e6d4f95d" alt="" src="images/Group-1.svg" loading="lazy"></a>
+      </div>
+    </div>
   </section>
   <section class="section double-pd ectra">
     <div class="container centered">
@@ -914,11 +920,10 @@ background-color: #bef84d;
   <section class="section double-pd">
     <div class="container centered">
       <div class="max-width-887 skinny">
-        <h1>Let’s build a</h1>
+        <h1>Let’s power a</h1>
         <div class="div-block-2 green">
-          <h1>clean energy</h1>
+          <h1>greener tomorrow</h1>
         </div>
-        <h1>future together</h1>
       </div>
     </div>
   </section>
@@ -936,11 +941,11 @@ background-color: #bef84d;
           <div class="text-block-5">Wires, Cables, and Conductors</div>
           <p class="paragraph-5">With years of expertise in manufacturing electricity transmission wires, cables, and conductors, we deliver power to even the most challenging terrains of the country.</p>
         </div><img src="images/11.png" loading="lazy" id="w-node-_9daac8e9-f001-0c6c-a827-f0585ad8e62c-46d3db74" sizes="100vw" alt="" srcset="images/11-p-500.png 500w, images/11.png 552w" class="image-11">
-        <div class="div-block-33">
+        <div id="w-node-_9daac8e9-f001-0c6c-a827-f0585ad8e62d-46d3db74" class="div-block-33">
           <div class="text-block-5">SCADA</div>
           <p class="paragraph-5">SCADA stands for Supervisory Control and Data Acquisition. It is a system used to monitor and control Industrial processes and Electrical Infrastructure in real time.</p>
         </div><img src="images/12.png" loading="lazy" id="w-node-_9daac8e9-f001-0c6c-a827-f0585ad8e632-46d3db74" sizes="100vw" alt="" srcset="images/12-p-500.png 500w, images/12.png 552w" class="image-11"><img src="images/13.png" loading="lazy" id="w-node-_9daac8e9-f001-0c6c-a827-f0585ad8e633-46d3db74" sizes="100vw" alt="" srcset="images/13-p-500.png 500w, images/13.png 552w" class="image-11 asa">
-        <div class="div-block-33">
+        <div id="w-node-_9daac8e9-f001-0c6c-a827-f0585ad8e634-46d3db74" class="div-block-33">
           <div class="text-block-5">EPC</div>
           <p class="paragraph-5">Anvil has been a trusted name in Engineering, Procurement, and Construction (EPC), offering solutions in project management, execution, supply chain, &amp; financial management.</p>
         </div><img src="images/14.png" loading="lazy" id="w-node-_9daac8e9-f001-0c6c-a827-f0585ad8e639-46d3db74" sizes="100vw" alt="" srcset="images/14-p-500.png 500w, images/14.png 552w" class="image-11">
