--- a/registration-form.html
+++ b/registration-form.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri Feb 21 2025 21:05:42 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Sat Feb 22 2025 07:43:55 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="67b4a351f03b2446eb06a7b5" data-wf-site="67adaf536612db1a46d3db6d">
 <head>
   <meta charset="utf-8">
@@ -21,7 +21,7 @@
   <link href="images/webclip.png" rel="apple-touch-icon">
 </head>
 <body>
-  <div data-animation="default" data-collapse="none" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
+  <div data-animation="default" data-collapse="none" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar no-hjl w-nav">
     <div class="container-2 w-container">
       <nav role="navigation" class="nav-menu w-nav-menu"></nav>
       <a href="index.html" class="brand w-nav-brand"><img src="images/Anvil.svg" loading="lazy" width="184" alt="" class="image-23"></a>
