--- a/resource.html
+++ b/resource.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri Feb 21 2025 21:05:42 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Sat Feb 22 2025 07:43:55 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="67b8a8e30b5566a3d2c9982e" data-wf-site="67adaf536612db1a46d3db6d">
 <head>
   <meta charset="utf-8">
@@ -20,34 +20,32 @@
 </head>
 <body>
   <section class="hero-section">
-    <div data-video-urls="" data-autoplay="true" data-loop="true" data-wf-ignore="true" class="background-video-2 w-background-video w-background-video-atom"><video id="2ae75632-bdf2-e7f8-c2e6-e73133b379b6-video" autoplay="" loop="" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover"></video>
+    <div data-poster-url="videos/videoplayback-poster-00001.jpg" data-video-urls="videos/videoplayback-transcode.mp4,videos/videoplayback-transcode.webm" data-autoplay="false" data-loop="true" data-wf-ignore="true" id="poundsound" class="background-video-2 w-background-video w-background-video-atom"><video id="2ae75632-bdf2-e7f8-c2e6-e73133b379b6-video" loop="" style="background-image:url(&quot;videos/videoplayback-poster-00001.jpg&quot;)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
+        <source src="videos/videoplayback-transcode.mp4" data-wf-ignore="true">
+        <source src="videos/videoplayback-transcode.webm" data-wf-ignore="true">
+      </video>
       <div class="div-block">
-        <a href="#" class="div-block-34 w-inline-block"><img src="images/Group-1.svg" loading="lazy" style="-webkit-transform:translate3d(null, 0px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(null, 0px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(null, 0px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(null, 0px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" data-w-id="504a4213-7dc3-1bea-6659-4541dd796a9e" alt=""></a>
-      </div><noscript>
-        <style>
-  [data-wf-bgvideo-fallback-img] {
-    display: none;
-  }
-  @media (prefers-reduced-motion: reduce) {
-    [data-wf-bgvideo-fallback-img] {
-      position: absolute;
-      z-index: -100;
-      display: inline-block;
-      height: 100%;
-      width: 100%;
-      object-fit: cover;
-    }
-  }</style><img data-wf-bgvideo-fallback-img="true" alt="">
-      </noscript>
-      <div aria-live="polite"><button type="button" data-w-bg-video-control="true" aria-controls="2ae75632-bdf2-e7f8-c2e6-e73133b379b6-video" class="w-backgroundvideo-backgroundvideoplaypausebutton play-pause-button w-background-video--control"><span class="play-state">
-            <div class="code-embed-10 w-embed"><svg width="100" height="100" viewbox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M50 8.33334C41.7591 8.33334 33.7033 10.7771 26.8512 15.3554C19.9992 19.9338 14.6587 26.4413 11.505 34.0549C8.35137 41.6685 7.52623 50.0462 9.13395 58.1288C10.7417 66.2113 14.71 73.6356 20.5372 79.4628C26.3644 85.29 33.7887 89.2583 41.8712 90.8661C49.9538 92.4738 58.3316 91.6486 65.9451 88.495C73.5587 85.3413 80.0662 80.0008 84.6446 73.1488C89.2229 66.2967 91.6667 58.2409 91.6667 50C91.6667 44.5283 90.5889 39.1101 88.495 34.0549C86.401 28.9996 83.3319 24.4063 79.4628 20.5372C75.5937 16.6681 71.0004 13.599 65.9451 11.505C60.8899 9.41108 55.4717 8.33334 50 8.33334ZM41.6667 68.75V31.25L66.6667 50L41.6667 68.75Z" fill="currentColor"></path>
-              </svg></div>
-          </span><span hidden=""><img loading="lazy" alt="Play video" src="https://uploads-ssl.webflow.com/6022af993a6b2191db3ed10c/628298b20ae0236682d4b87f_Play-24.svg"></span></button></div>
+        <a href="#" class="div-block-34 w-inline-block"><img style="-webkit-transform:translate3d(null, 0px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(null, 0px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(null, 0px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(null, 0px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" data-w-id="504a4213-7dc3-1bea-6659-4541dd796a9e" alt="" src="images/Group-1.svg" loading="lazy"></a>
+      </div>
     </div>
   </section>
-  <section class="section"></section>
+  <section class="section">
+    <div class="code-embed-12 w-embed"><video width="320" height="240" autoplay="">
+        <source src="/public_html/images/anvil-vid.mp4" type="video/mp4">
+        <source src="movie.ogg" type="video/ogg">
+        Your browser does not support the video tag.
+      </video></div>
+  </section>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=67adaf536612db1a46d3db6d" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
+  <script>
+	$("#poundsound").on('click', function (){
+		if( $("video").prop('muted') ) {
+		      $("video").prop('muted', false);
+		} else {
+		  $("video").prop('muted', true);
+		}
+	});
+</script>
 </body>
 </html>
