--- a/index.html
+++ b/index.html
@@ -892,7 +892,7 @@ background-color: #bef84d;
               <h2>Get in Touch</h2>
             </div>
             <div class="form-block w-form">
-              <form id="contactForm" onsubmit="submitForm()" data-name="Email Form" method="post" action="https://app.anvil.energy/api/send/message" class="form" data-wf-page-id="67adaf536612db1a46d3db74" data-wf-element-id="9cfb01da-c260-1f22-32c9-94dc1c11c37f">
+              <form id="contactForm" onsubmit="submitForm()" data-name="Email Form" method="post" action="https://app.anvil.energy/api/message/send" class="form" data-wf-page-id="67adaf536612db1a46d3db74" data-wf-element-id="9cfb01da-c260-1f22-32c9-94dc1c11c37f">
                 <div class="div-block-47">
                   <div class="div-block-46"><label for="name">First Name</label><input class="text-field w-input" maxlength="256" name="first_name" data-name="Name" placeholder="" type="text" id="name" required=""></div>
                   <div class="div-block-46"><label for="name-2">Last Name</label><input class="text-field w-input" maxlength="256" name="last_name" data-name="Name 2" placeholder="" type="text" id="name-2" required=""></div>
