--- a/index.html
+++ b/index.html
@@ -1206,7 +1206,7 @@ background-color: #bef84d;
                 $('#suc').removeAttr('style')
               },2000)
             }
-            document.getElementById('contact-form').reset();
+            document.getElementById('contactForm').reset();
             $('#submitBtn').val('Submit');
             $('#submitBtn').removeAttr('disabled')
           });
