--- a/index.html
+++ b/index.html
@@ -894,16 +894,16 @@ background-color: #bef84d;
             <div class="form-block w-form">
               <form id="contactForm" onsubmit="submitForm()" data-name="Email Form" method="post" action="https://app.anvil.energy/api/message/send" class="form" data-wf-page-id="67adaf536612db1a46d3db74" data-wf-element-id="9cfb01da-c260-1f22-32c9-94dc1c11c37f">
                 <div class="div-block-47">
-                  <div class="div-block-46"><label for="name">First Name</label><input class="text-field w-input" maxlength="256" name="first_name" data-name="Name" placeholder="" type="text" id="name" required=""></div>
-                  <div class="div-block-46"><label for="name-2">Last Name</label><input class="text-field w-input" maxlength="256" name="last_name" data-name="Name 2" placeholder="" type="text" id="name-2" required=""></div>
+                  <div class="div-block-46"><label for="name">First Name</label><input class="text-field w-input" maxlength="256" name="First name" data-name="Name" placeholder="" type="text" id="name" required=""></div>
+                  <div class="div-block-46"><label for="name-2">Last Name</label><input class="text-field w-input" maxlength="256" name="Last name" data-name="Name 2" placeholder="" type="text" id="name-2" required=""></div>
                 </div>
                 <div class="div-block-46"><label for="name-3">Email</label><input class="text-field w-input" maxlength="256" name="email" data-name="Name 3" placeholder="" type="email" id="name-3" required=""></div>
-                <div class="div-block-46"><label for="field">Inquiring For:</label><select id="field" name="field" data-name="inquirying_for" required="" class="select w-select">
+                <div class="div-block-46"><label for="field">Inquiring For:</label><select id="field" name="Inquiring For" data-name="inquirying_for" required="" class="select w-select">
                     <option value="Anvil Cables">Anvil Cables</option>
                     <option value="Anvil Distributech">Anvil Distributech</option>
                     <option value="Anvil Urja">Anvil Urja</option>
                   </select></div>
-                <div class="div-block-46"><label for="field-2">Other</label><textarea placeholder="" maxlength="5000" id="field-2" name="inquirying_for" data-name="Field 2" class="text-field w-input"></textarea></div><input type="submit" id="submitBtn" data-wait="Please wait..." class="submit-button w-button" value="Submit">
+                <div class="div-block-46"><label for="field-2">Other</label><textarea placeholder="" maxlength="5000" id="field-2" name="Other" data-name="Field 2" class="text-field w-input"></textarea></div><input type="submit" id="submitBtn" data-wait="Please wait..." class="submit-button w-button" value="Submit">
               </form>
               <div class="success-message w-form-done" id="suc">
                 <div>Thank you! Your submission has been received!</div>
