--- a/registration-form.html
+++ b/registration-form.html
@@ -49,27 +49,27 @@
         <h2>Personal Information</h2>
       </div>
       <div class="form-block _1 w-form">
-        <form id="email-form" name="email-form" data-name="Email Form" method="get" class="form blk" data-wf-page-id="67b4a351f03b2446eb06a7b5" data-wf-element-id="ea78dd9b-c928-e507-eff1-d1b21f34ca27">
-          <div class="div-block-46 vert btm-10"><label for="field-3" class="field-label new">Registration Type*</label><select id="field-3" name="field-3" data-name="Field 3" required="" class="select _500 w-select">
+        <form id="contactForm" onsubmit="submitForm()" data-name="Email Form" method="post" action="https://app.anvil.energy/api/message/send" class="form blk" data-wf-page-id="67b4a351f03b2446eb06a7b5" data-wf-element-id="ea78dd9b-c928-e507-eff1-d1b21f34ca27">
+          <div class="div-block-46 vert btm-10"><label for="field-3" class="field-label new">Registration Type*</label><select id="field-3" name="Registration Type" data-name="Field 3" required="" class="select _500 w-select">
               <option value="1">External Participant</option>
               <option value="2">Media / Industry Analyst</option>
               <option value="3">Anvil Employee</option>
             </select></div>
           <div class="div-block-47 btm-10">
-            <div class="div-block-46 vert"><label for="name-4" class="field-label new">Full Name*</label><input class="text-field btm-0 w-input" maxlength="256" name="name-4" data-name="Name 4" placeholder="" type="text" id="name-4" required=""></div>
+            <div class="div-block-46 vert"><label for="name-4" class="field-label new">Full Name*</label><input class="text-field btm-0 w-input" maxlength="256" name="Full Name" data-name="Name 4" placeholder="" type="text" id="name-4" required=""></div>
           </div>
           <div class="div-block-47 btm-10">
-            <div class="div-block-46 vert"><label for="name-4" class="field-label new">Email Address*</label><input class="text-field btm-0 w-input" maxlength="256" name="name-4" data-name="Name 4" placeholder="" type="email" id="name-4" required=""></div>
+            <div class="div-block-46 vert"><label for="name-4" class="field-label new">Email Address*</label><input class="text-field btm-0 w-input" maxlength="256" name="email" data-name="Name 4" placeholder="" type="email" id="name-4" required=""></div>
           </div>
           <div class="div-block-47 btm-10">
-            <div class="div-block-46 vert"><label for="name-4" class="field-label new">Contact Number</label><input class="text-field btm-0 w-input" maxlength="256" name="name-4" data-name="Name 4" placeholder="" type="tel" id="name-4"></div>
+            <div class="div-block-46 vert"><label for="name-4" class="field-label new">Contact Number</label><input class="text-field btm-0 w-input" maxlength="256" name="Contact Number" data-name="Name 4" placeholder="" type="tel" id="name-4"></div>
           </div>
-          <div class="text-block-8">*items marked are mandatory</div><input type="submit" data-wait="Please wait..." class="submit-button w-button" value="Submit">
+          <div class="text-block-8">*items marked are mandatory</div><input id="submitBtn" type="submit" data-wait="Please wait..." class="submit-button w-button" value="Submit">
         </form>
-        <div class="success-message w-form-done">
+        <div class="success-message w-form-done" id="suc"> 
           <div>Thank you! Your submission has been received!</div>
         </div>
-        <div class="error-message w-form-fail">
+        <div class="error-message w-form-fail" id="fai">
           <div>Oops! Something went wrong while submitting the form.</div>
         </div>
       </div>
@@ -82,5 +82,31 @@
   </section>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=67adaf536612db1a46d3db6d" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
+  <script>
+    function submitForm(){
+          event.preventDefault();
+          var formData = Object.fromEntries(new FormData(document.getElementById('contactForm')).entries())
+          url = $('#contactForm').attr('action')
+          $('#submitBtn').val('Submitting...')
+          $('#submitBtn').attr('disabled','disabled')
+          $.post(url, formData)
+          .always(function(data){
+            if(parseInt(data.status) > 200){
+              $('#fai').css("display","flex")
+              setTimeout(function(){
+                $('#fai').removeAttr('style')
+              },2000)
+            }else{
+              $('#suc').css("display","flex")
+              setTimeout(function(){
+                $('#suc').removeAttr('style')
+              },2000)
+            }
+            document.getElementById('contactForm').reset();
+            $('#submitBtn').val('Submit');
+            $('#submitBtn').removeAttr('disabled')
+          });
+    }
+  </script>
 </body>
 </html>
