--- a/registration-form.html
+++ b/registration-form.html
@@ -51,9 +51,9 @@
       <div class="form-block _1 w-form">
         <form id="contactForm" onsubmit="submitForm()" data-name="Email Form" method="post" action="https://app.anvil.energy/api/message/send" class="form blk" data-wf-page-id="67b4a351f03b2446eb06a7b5" data-wf-element-id="ea78dd9b-c928-e507-eff1-d1b21f34ca27">
           <div class="div-block-46 vert btm-10"><label for="field-3" class="field-label new">Registration Type*</label><select id="field-3" name="Registration Type" data-name="Field 3" required="" class="select _500 w-select">
-              <option value="1">External Participant</option>
-              <option value="2">Media / Industry Analyst</option>
-              <option value="3">Anvil Employee</option>
+              <option value="External Participant">External Participant</option>
+              <option value="Media / Industry Analyst">Media / Industry Analyst</option>
+              <option value="Anvil Employee">Anvil Employee</option>
             </select></div>
           <div class="div-block-47 btm-10">
             <div class="div-block-46 vert"><label for="name-4" class="field-label new">Full Name*</label><input class="text-field btm-0 w-input" maxlength="256" name="Full Name" data-name="Name 4" placeholder="" type="text" id="name-4" required=""></div>
