--- a/index.html
+++ b/index.html
@@ -1131,7 +1131,7 @@ background-color: #bef84d;
           <div id="w-node-_09df9d50-07d9-7ebd-465b-3b137bf914ba-46d3db74" class="footer-block">
             <div class="title-small">Contact Us</div>
             <p class="footer-link no-hover">224, A.J.C. Bose Road,<br>Room No. 102, Krishna Building,<br>Kolkata-700017, West Bengal,<br>
-              <a href="tel:+919147387882" class="footer-link">+91 91473 87882</a><br><br>Toll Free Number for Solar Enquiries:<br>
+              <a href="tel:03323015300" class="footer-link">03323015300</a><br><br>Toll Free Number for Solar Enquiries:<br>
               <a href="tel:18002020001" class="footer-link">1800 2020 001</a>
             </p>
           </div>
