--- a/index.html
+++ b/index.html
@@ -1154,7 +1154,7 @@ background-color: #bef84d;
     <div class="container-3">
       <div class="footer-wrapper">
         <div class="div-block-54">
-          <a href="#" class="footer-brand w-inline-block"><img src="images/Anvil.svg" loading="lazy" alt="Anvil Logo" class="image-16"></a><img src="images/74949-Smart-Metering-AMI---CMMI-Development---Maturity-Level---3.webp" loading="lazy" sizes="100vw" srcset="images/74949-Smart-Metering-AMI---CMMI-Development---Maturity-Level---3.webp 500w, images/74949-Smart-Metering-AMI---CMMI-Development---Maturity-Level---3.webp 697w" alt="CMMI appraised till 2028 certification" class="image-17">
+          <a href="#" class="footer-brand w-inline-block"><img src="images/Anvil.svg" loading="lazy" alt="Anvil Logo" class="image-16"></a><img src="images/74949-Smart-Metering-AMI---CMMI-Development---Maturity-Level---3.png" loading="lazy" sizes="100vw" srcset="images/74949-Smart-Metering-AMI---CMMI-Development---Maturity-Level---3.png 500w, images/74949-Smart-Metering-AMI---CMMI-Development---Maturity-Level---3.png 697w" alt="CMMI appraised till 2028 certification" class="image-17">
         </div>
         <div class="footer-content">
           <div id="w-node-_09df9d50-07d9-7ebd-465b-3b137bf914a6-46d3db74" class="footer-block">
